desktop first section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Social Media dashboard with theme switcher</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="switch.css">
 </head>
 
 <body>
@@ -29,127 +33,130 @@
   </header>
 
   <div class="overview_main">
-
     <div class="social">
+      <span class="social_color fb"></span>
       <div class="social_type">
-        <img src="" alt="">
+        <img class="logo" src="/images/icon-facebook.svg" alt="icon-facebook">
         <p class="name">@nathanf</p>
       </div>
       <h2 class="total">1987</h2>
       <p class="unit">Followers</p>
       <div class="change_containter">
-        <img src="" alt="">
-        <p class="change">12 Today</p>
+        <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
+        <p class="change green">12 Today</p>
       </div>
     </div>
     <div class="social">
+      <span class="social_color tw"></span>
       <div class="social_type">
-        <img src="" alt="">
+        <img class="logo" src="/images/icon-twitter.svg" alt="icon-twitter">
         <p class="name">@nathanf</p>
       </div>
       <h2 class="total">1044</h2>
       <p class="unit">Followers</p>
       <div class="change_containter">
-        <img src="" alt="">
-        <p class="change">99 Today</p>
+        <img class="arrow" src="images/icon-up.svg" alt="icon-up">
+        <p class="change green">99 Today</p>
       </div>
     </div>
     <div class="social">
+      <span class="social_color is"></span>
       <div class="social_type">
-        <img src="" alt="">
+        <img class="logo" src="images/icon-instagram.svg" alt="icon-instagram">
         <p class="name">@realnathanf</p>
       </div>
       <h2 class="total">11k</h2>
       <p class="unit">Followers</p>
       <div class="change_containter">
-        <img src="" alt="">
-        <p class="change">1099 Today</p>
+        <img class="arrow" src="images/icon-up.svg" alt="icon-up">
+        <p class="change green">1099 Today</p>
       </div>
     </div>
     <div class="social">
+      <span class="social_color yt"></span>
       <div class="social_type">
-        <img src="" alt="">
+        <img class="logo" src="images/icon-youtube.svg" alt="icon-youtube">
         <p class="name">Nathan F.</p>
       </div>
       <h2 class="total">8239</h2>
       <p class="unit">Subscribers</p>
       <div class="change_containter">
-        <img src="" alt="">
-        <p class="change">144 Today</p>
+        <img class="arrow" src="images/icon-down.svg" alt="icon-down">
+        <p class="change red">144 Today</p>
       </div>
     </div>
   </div>
-  <h3 class="secondary_titile">Overview - Today</h3>
+  <h3 class="secondary_title">Overview - Today</h3>
   <div class="overview_today">
     <div class="overview_item">
       <p class="description">Page Views</p>
-      <img src="" alt="">
+      <img class="logo" src="/images/icon-facebook.svg" alt="icon-facebook">
       <h3 class="summary">87</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
         <p class="change">3%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img src="" alt="">
+      <img class="logo" src="/images/icon-facebook.svg" alt="icon-facebook">
       <h3 class="summary">52</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="images/icon-down.svg" alt="icon-down">
         <p class="change">2%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img src="" alt="">
+      <img class="logo" src="images/icon-instagram.svg" alt="icon-instagram">
       <h3 class="summary">5462</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
         <p class="change">2257%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Profile Views</p>
-      <img src="" alt="">
+      <img class="logo" src="images/icon-instagram.svg" alt="icon-instagram">
       <h3 class="summary">52k</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
         <p class="change">1375%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Retweets</p>
-      <img src="" alt="">
+      <img class="logo" src="/images/icon-twitter.svg" alt="icon-twitter">
       <h3 class="summary">117</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
         <p class="change">303%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img src="" alt="">
+      <img class="logo" src="/images/icon-twitter.svg" alt="icon-twitter">
       <h3 class="summary">507</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
         <p class="change">553%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img src="" alt="">
+      <img class="logo" src="images/icon-youtube.svg" alt="icon-youtube">
       <h3 class="summary">107</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="images/icon-down.svg" alt="icon-down">
         <p class="change">19%</p>
       </div>
     </div>
     <div class="overview_item">
       <p class="description">Total Views</p>
-      <img src="" alt="">
+      <img class="logo" src="images/icon-youtube.svg" alt="icon-youtube">
       <h3 class="summary">1407</h3>
       <div class="change_container">
-        <img src="" alt="">
+        <img class="arrow" src="images/icon-down.svg" alt="icon-down">
         <p class="change">12%</p>
       </div>
     </div>
