--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
   <h3 class="secondary_title">Overview - Today</h3>
   <div class="overview_today">
     <div class="overview_item">
-      <p class="description">Page Views</p>
-      <img class="logo" src="/images/icon-facebook.svg" alt="icon-facebook">
-      <h3 class="summary">87</h3>
-      <div class="change_container">
+      <p class="left up description">Page Views</p>
+      <img class="right up" src="/images/icon-facebook.svg" alt="icon-facebook">
+      <h3 class="left down summary">87</h3>
+      <div class="right down change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
         <p class="change">3%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Likes</p>
-      <img class="logo" src="/images/icon-facebook.svg" alt="icon-facebook">
+      <p class="left description">Likes</p>
+      <img class="right" src="/images/icon-facebook.svg" alt="icon-facebook">
       <h3 class="summary">52</h3>
       <div class="change_container">
         <img class="arrow" src="images/icon-down.svg" alt="icon-down">
@@ -108,7 +108,7 @@
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img class="logo" src="images/icon-instagram.svg" alt="icon-instagram">
+      <img src="images/icon-instagram.svg" alt="icon-instagram">
       <h3 class="summary">5462</h3>
       <div class="change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
@@ -117,7 +117,7 @@
     </div>
     <div class="overview_item">
       <p class="description">Profile Views</p>
-      <img class="logo" src="images/icon-instagram.svg" alt="icon-instagram">
+      <img src="images/icon-instagram.svg" alt="icon-instagram">
       <h3 class="summary">52k</h3>
       <div class="change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
@@ -126,7 +126,7 @@
     </div>
     <div class="overview_item">
       <p class="description">Retweets</p>
-      <img class="logo" src="/images/icon-twitter.svg" alt="icon-twitter">
+      <img src="/images/icon-twitter.svg" alt="icon-twitter">
       <h3 class="summary">117</h3>
       <div class="change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
@@ -135,7 +135,7 @@
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img class="logo" src="/images/icon-twitter.svg" alt="icon-twitter">
+      <img src="/images/icon-twitter.svg" alt="icon-twitter">
       <h3 class="summary">507</h3>
       <div class="change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
@@ -144,7 +144,7 @@
     </div>
     <div class="overview_item">
       <p class="description">Likes</p>
-      <img class="logo" src="images/icon-youtube.svg" alt="icon-youtube">
+      <img src="images/icon-youtube.svg" alt="icon-youtube">
       <h3 class="summary">107</h3>
       <div class="change_container">
         <img class="arrow" src="images/icon-down.svg" alt="icon-down">
@@ -153,7 +153,7 @@
     </div>
     <div class="overview_item">
       <p class="description">Total Views</p>
-      <img class="logo" src="images/icon-youtube.svg" alt="icon-youtube">
+      <img src="images/icon-youtube.svg" alt="icon-youtube">
       <h3 class="summary">1407</h3>
       <div class="change_container">
         <img class="arrow" src="images/icon-down.svg" alt="icon-down">
