desktop layout done

--- a/index.html
+++ b/index.html
@@ -94,70 +94,70 @@
       <h3 class="left down summary">87</h3>
       <div class="right down change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
-        <p class="change">3%</p>
+        <p class=" green change">3%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="left description">Likes</p>
-      <img class="right" src="/images/icon-facebook.svg" alt="icon-facebook">
-      <h3 class="summary">52</h3>
-      <div class="change_container">
+      <p class="left up description">Likes</p>
+      <img class="right up" src="/images/icon-facebook.svg" alt="icon-facebook">
+      <h3 class="left down summary">52</h3>
+      <div class="right down change_container">
         <img class="arrow" src="images/icon-down.svg" alt="icon-down">
-        <p class="change">2%</p>
+        <p class="red change">2%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Likes</p>
-      <img src="images/icon-instagram.svg" alt="icon-instagram">
-      <h3 class="summary">5462</h3>
-      <div class="change_container">
+      <p class="left up description">Likes</p>
+      <img class="right up" src="images/icon-instagram.svg" alt="icon-instagram">
+      <h3 class="left down summary">5462</h3>
+      <div class="right down change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
-        <p class="change">2257%</p>
+        <p class="green change">2257%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Profile Views</p>
-      <img src="images/icon-instagram.svg" alt="icon-instagram">
-      <h3 class="summary">52k</h3>
-      <div class="change_container">
+      <p class="left up description">Profile Views</p>
+      <img class="right up" src="images/icon-instagram.svg" alt="icon-instagram">
+      <h3 class="left down summary">52k</h3>
+      <div class="right down change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
-        <p class="change">1375%</p>
+        <p class="green change">1375%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Retweets</p>
-      <img src="/images/icon-twitter.svg" alt="icon-twitter">
-      <h3 class="summary">117</h3>
-      <div class="change_container">
+      <p class="left up description">Retweets</p>
+      <img class="right up" src="/images/icon-twitter.svg" alt="icon-twitter">
+      <h3 class="left down summary">117</h3>
+      <div class="right down change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
-        <p class="change">303%</p>
+        <p class="green change">303%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Likes</p>
-      <img src="/images/icon-twitter.svg" alt="icon-twitter">
-      <h3 class="summary">507</h3>
-      <div class="change_container">
+      <p class="left up description">Likes</p>
+      <img class="right up" src="/images/icon-twitter.svg" alt="icon-twitter">
+      <h3 class="left down summary">507</h3>
+      <div class="right down change_container">
         <img class="arrow" src="/images/icon-up.svg" alt="icon-up">
-        <p class="change">553%</p>
+        <p class="green change">553%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Likes</p>
-      <img src="images/icon-youtube.svg" alt="icon-youtube">
-      <h3 class="summary">107</h3>
-      <div class="change_container">
+      <p class="left up description">Likes</p>
+      <img class="right up" src="images/icon-youtube.svg" alt="icon-youtube">
+      <h3 class="left down summary">107</h3>
+      <div class="right down change_container">
         <img class="arrow" src="images/icon-down.svg" alt="icon-down">
-        <p class="change">19%</p>
+        <p class="red change">19%</p>
       </div>
     </div>
     <div class="overview_item">
-      <p class="description">Total Views</p>
-      <img src="images/icon-youtube.svg" alt="icon-youtube">
-      <h3 class="summary">1407</h3>
-      <div class="change_container">
+      <p class="left up description">Total Views</p>
+      <img class="right up" src="images/icon-youtube.svg" alt="icon-youtube">
+      <h3 class=" left down summary">1407</h3>
+      <div class=" right down change_container">
         <img class="arrow" src="images/icon-down.svg" alt="icon-down">
-        <p class="change">12%</p>
+        <p class="red change">12%</p>
       </div>
     </div>
   </div>
