--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="switch.css">
 </head>
 
-<body>
+<body class="page">
   <div class="bg"></div>
   <header>
     <div class="title">
@@ -26,12 +26,11 @@
     <div class="switcher">
       <p class="mode">Dark Mode</p>
       <label class="switch">
-        <input type="checkbox">
+        <input class="theme_switch" type="checkbox">
         <span class="slider round"></span>
       </label>
     </div>
   </header>
-
   <div class="overview_main">
     <div class="social">
       <span class="social_color fb"></span>
